<resources>
    <string name="instapager_login_html" formatted="false">&lt;!DOCTYPE html> &lt;html> &lt;head> &lt;meta content=\"text/html; charset=utf-8\" http-equiv=\"Content-Type\"> &lt;meta content=\"width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1,user-scalable=no\" id=\"viewport\" name=\"viewport\"> &lt;meta content=\"yes\" name=\"apple-mobile-web-app-capable\"> &lt;title>%s&lt;/title> &lt;style type=\"text/css\"> body{margin:0;padding:0} .inputstyle { -webkit-tap-highlight-color:rgba(255,255,255,0); width:100%%; height:44px; color:#000; background:0; border:0; font-size:16px; outline: none; -webkit-appearance:none } .btn { width:90%%; height:44px; line-height:44px; background:#A0C035; border:0; border-radius:4px; color:#fff; font-size:16px; text-align:center; margin-top:15px; display:block } .btn:disabled { background: #dddddd; } .error { color:red; } &lt;/style> &lt;/head> &lt;body> &lt;script type=\"text/javascript\"> function login(form){ var u=form[\"u\"].value,p=form[\"p\"].value; if(!u || !p) return false; form[\"s\"].disabled = true; return true; } &lt;/script> &lt;form style=\"margin-top:45px;\" action=\"%s\" metho=\"get\" onsubmit=\"return login(this);\"> %s &lt;div style=\"padding-left:15px;border-top:1px solid #E3E3E5;border-bottom:1px solid #E3E3E5;\"> &lt;input type=\"hidden\" name=\"ID_SIGN\" value=\"OWELJSFPWECSFEW\"/> &lt;input class=\"inputstyle\" id=\"u\" name=\"u\" type=\"text\" value=\"%s\" placeholder=\"%s\" style=\"border-bottom:1px solid #E3E3E5;\"/> &lt;input class=\"inputstyle\" id=\"p\" name=\"p\" type=\"password\" placeholder=\"%s\"/> &lt;/div> &lt;p>&lt;input style=\"margin:0 auto;\" type=\"submit\" name=\"s\" value=\" %s \" class=\"btn\"/>&lt;/p> &lt;/form> &lt;/body> &lt;/html></string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">证书分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="select_a_friend">请选择一个朋友</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">https://qiye.jiankongbao.com/</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="baidutieba_client_inavailable">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
    <string name="laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="kaixin">开心网</string>
    <string name="email">邮件</string>
    <string name="shortmessage">信息</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="douban">豆瓣</string>
    <string name="youdao">有道云笔记</string>
    <string name="evernote">印象笔记</string>
    <string name="linkedin">领英</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>
    <string name="yixin">易信</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="mingdao">明道</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kakaostory">KakaoStory</string>
    <string name="line">Line</string>
    <string name="bluetooth">蓝牙</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="pocket">Pocket</string>
    <string name="instapaper">Instapaper</string>
    <string name="instapaper_email">邮箱</string>
    <string name="instapaper_pwd">密码</string>
    <string name="instapaper_login">登录</string>
    <string name="instapaper_logining">登录中…</string>
    <string name="instapager_email_or_password_incorrect">账号或密码不正确</string>
    <string name="instapager_email_or_password_input">账号或密码未输入</string>
    <string name="response_error">返回数据格式有误</string>
    <string name="operator_success">操作成功</string>
    <string name="operator_fail">操作失败</string>
    <string name="facebookmessenger">Facebook Messenger</string>
    <string name="baidutieba">百度贴吧</string>
    <string name="laiwang">来往</string>
    <string name="laiwangmoments">来往动态</string>
    <string name="share_to_baidutieba">分享到百度贴吧</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="use_login_button">请改用“登录”按钮</string>
    <string name="bottom_menu_txt_home">概览</string>
    <string name="bottom_menu_txt_project">项目</string>
    <string name="bottom_menu_txt_warning">告警</string>
    <string name="bottom_menu_txt_liebao_warning">猎豹告警</string>
    <string name="bottom_menu_txt_user">账户</string>
    <string name="bottom_menu_home_title">概览</string>
    <string name="bottom_menu_project_title">监测项目</string>
    <string name="bottom_menu_warning_title">告警信息</string>
    <string name="bottom_menu_liebao_warning_title">猎豹告警</string>
    <string name="bottom_menu_user_title">账户中心</string>
    <string name="user_push_set">实时推送设置</string>
    <string name="user_check_update">检查更新</string>
    <string name="user_pay_upgrade">套餐升级及续费</string>
    <string name="user_about_us">关于我们</string>
    <string name="user_exit">退出</string>
    <string name="sm_item_fl_weibo">关注新浪微博</string>
    <string name="sm_item_fl_tc">关注腾讯微博</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://qiye.jiankongbao.com @监控宝</string>
    <string name="share_content_short">监控宝不仅集成简单、支持如微信、新浪微博、腾讯微博等社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://qiye.jiankongbao.com @监控宝</string>
    <string name="about_company_profile_title">公司简介</string>
    <string name="about_contact_title">联系我们</string>
    <string name="about_address_title">公司地址</string>
    <string name="progress_check_update">检查更新，请稍后...</string>
    <string name="progress_login">登录中，请稍后...</string>
    <string name="progress_logout">正在退出，请稍后...</string>
    <string name="progress_load_project">加载项目信息...</string>
    <string name="progress_submit_collect">正在提交，请稍后...</string>
    <string name="toast_logout_success">退出当前账户</string>
    <string name="check_update_thelastest">^_^ 当前是最新版本！</string>
    <string name="login_check_empty">邮箱或密码不能为空！</string>
    <string name="network_connection_error">网络连接超时，请稍后再试~</string>
    <string name="network_read_error">获取网络数据错误~</string>
    <string name="network_server_error">服务器错误~</string>
    <string name="network_request_null">请求地址不存在，请稍后再试~</string>
    <string name="network_request_timeout">请求超时，请稍后再试~</string>
    <string name="check_update_error">版本检测失败~</string>
    <string name="uprefresh_nomore_data">没有更多数据啦...</string>
    <string name="jpush_start">开启实时推送</string>
    <string name="jpush_close">关闭实时推送</string>
    <string name="jpush_error">实时推送设置失败~</string>
    <string name="server_error">服务错误</string>
    <string name="login_error">登录错误</string>
    <string name="jpush_get">正在获取推送状态...</string>
    <string name="jpush_set">正在设置推送状态...</string>
    <string name="push_set">开启推送</string>
    <string name="sound">声音</string>
    <string name="push_tip_sound">推送提示音</string>
    <string name="push_sound_name">跟随系统</string>
    <string name="shock">震动</string>
    <string name="notification_network">您的网络连接异常，请查看！</string>
    <string name="filter_view_dialog_content">开始日期@不存在或手机日期错误.</string>
    <string name="about_company_profile_content">　　云智慧（北京）科技有限公司成立于2009年，是国内领先的应用性能管理运营商。为企业级用户提供全面、专业的端到端的应用性能管理服务（End To End Application Performance Management）。已为几十万企业用户提供了前瞻性的智慧型性能管理服务，云智慧已经成为中国市场新一代APM的标杆企业。</string>
    <string name="about_contact_content">"销售咨询
电话：010-57011549 工作日（9:00 - 18:00）
企业QQ：4006620365
市场合作
bd@jiankongbao.com"</string>
    <string name="about_address_content">"中电发展大厦A座16层
北京市朝阳区霞光里9号"</string>
    <string name="sla_title">网站SLA证书</string>
    <string name="sla_content">　　本证书由第三方监测机构——云智慧（北京）科技有限公司制作并颁发，依据和参考的标准为云智慧全球100多个分布式监测点，对目标网站的可用率监测结果。</string>
    <string name="sla_service_level">服务等级：</string>
    <string name="sla_monitor_content">监测内容：网站可用率、网站故障时长、网站故障次数</string>
    <string name="sla_available">可用率算法：（总时间-故障时长）/总时间*100%</string>
    <string name="sla_service_rule">服务等级规则：</string>
    <string name="sla_service_rule_content">"五星：大于等于99，小于100，SLA基本未受影响。
四星：大于等于97，小于99，SLA受到较小影响。
三星：大于等于95，小于97，SLA受到一些影响。
无：小于95，SLA受到严重影响。"</string>
    <string name="sla_resource">数据来源：监控宝</string>
    <string name="sla_desp">"以下说明与本证书一起构成证书统一整理，不可分割：
1、本证书并不表明云智慧（北京）科技有限公司对监控网站是否贬斥、侵害或毁损任何第三人之合法权益或利益。
2、本证书不得用于非法目的，云智慧不承担任何由此而发生或可能发生之法律责任。"</string>
    <string name="app_name">设备监控系统</string>
    <string name="login_login">登录</string>
    <string name="login_cancel">取消</string>
    <string name="login_password">密码</string>
    <string name="login_email">账号</string>
    <string name="search_content_hint">输入关键字(至少4个字母或2个汉字)</string>
    <string name="search_content_tip">搜索内容不得少于4个字母或2个汉字！</string>
    <string name="promo_code_tip">请输入优惠码</string>
    <string name="pull_to_refresh_pull_label">向下拉刷新…</string>
    <string name="copy_company">泰安步科赛尔电气有限公司（v0.2.1）</string>
    <string name="bj_wendu">报警温度（℃）</string>
    <string name="tl_wendu">停炉温度（℃）</string>
    <string name="mb_wendu">目标温度（℃）</string>
    <string name="ql_huicha_yali">启炉回差压力(MPa)</string>
    <string name="qian_yanshi">前延时（秒）</string>
    <string name="hou_yanshi">后延时（秒）</string>
    <string name="paiyanwendu">排烟温度（℃）</string>
    <string name="chukouwendu">出口温度（℃）</string>
    <string name="rukouwendu">入口温度（℃）</string>
    <string name="jishuibeng">给水泵（主）</string>
    <string name="jishuibengbei">给水泵（备）</string>
    <string name="xunhuanbeng">循环泵（主）</string>
    <string name="xunhuanbengbei">循环泵（备）</string>
    <string name="shuiwei_status">水位状态</string>
    <string name="yali_status">压力状态</string>
    <string name="ranshaoqi_status">燃烧器状态</string>
</resources>